qemu-tests/tests/snapshots/mps3-an536-el2/undef-exception-t32-thumbv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is a undef exception example
undefined abort occurred Hsr { ec: Ok(Unknown), il: ThirtyTwoBit, iss: 00000000 }, Some(Unknown(IssUnknown(0)))
caught udf_from_t32
Doing it again
undefined abort occurred Hsr { ec: Ok(Unknown), il: ThirtyTwoBit, iss: 00000000 }, Some(Unknown(IssUnknown(0)))
caught udf_from_t32
Skipping instruction
Recovered from fault OK!
